--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -28,7 +28,7 @@
 	font-family: 'Fira Sans';
 	src: url('/fonts/FiraSans-Regular.woff2') format('woff2'),
 		url('/fonts/FiraSans-Regular.woff') format('woff');
-	font-weight: normal;
+	font-weight: 400;
 	font-style: normal;
 	font-display: swap;
 }
@@ -53,7 +53,7 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	-webkit-text-size-adjust: 100%;
+	text-size-adjust: 100%;
 	-webkit-tap-highlight-color: transparent;
 	user-select: none;
 }
